--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Array in javascript</h1>
     <script>
-        var fruits=['apple','banana','kiwi','orange','watermelon','stawberry']
+        var fruits=['Apple','Banana','Kiwi','Orange','Watermelon','Stawberry']
         document.write('<br>'+ fruits[0])
         document.write('<br>'+ fruits[1])
         document.write('<br>'+ fruits[2])
